--- a/special-curtain-app/src/app/aurora/aurora.component.scss
+++ b/special-curtain-app/src/app/aurora/aurora.component.scss
@@ -2,7 +2,7 @@
   overflow: scroll;
   width: 100%;
   height: 100%;
-  
+
   background: #000;
 
 }
@@ -12,7 +12,7 @@
 
 $shadow-size: 15vh;
 $shadow-offset: $shadow-size * 1.5;
-$shadow-colors: purple, violet, teal, orangered, yellow, crimson, yellowgreen, orange, darkturquoise, pink, steelblue,  turquoise, coral, skyblue,  darkviolet, gold, darkslateblue;
+$shadow-colors: rgb(151, 68, 151), rgb(255, 151, 255), rgb(61, 131, 131), rgb(255, 142, 101), rgb(255, 244, 91), rgb(252, 67, 104), yellowgreen, orange, darkturquoise, pink, steelblue,  turquoise, coral, skyblue,  darkviolet, gold, rgb(94, 167, 236);
 $colors-max: length($shadow-colors);
 
 $shadows-steps: 4;
@@ -27,8 +27,8 @@ $matrix-v: 20;
 
 @function get_color($position){
   $color: nth($shadow-colors, 1);
-  
-  
+
+
   @if ($position < $colors-max) {
     $color: nth($shadow-colors, $position);
   }
@@ -36,31 +36,31 @@ $matrix-v: 20;
     $fixed-position: $position % $colors-max + 1;
     $color: nth($shadow-colors, $fixed-position);
   }
-  
+
   @return $color;
 }
 
 @function shadow-matrix ($color-offset: 0){
   $out: null;
   $cell-counter: 1;
-  
+
   @for $cell_column from 1 through $matrix-v {
     $step-v: ($cell_column - 1) * $shadow-offset;
-    
+
     @for $cell_row from 1 through $matrix-h {
       $color: get_color($cell-counter + $color-offset);
-      
+
       $step-h: ($cell_row - 1) * $shadow-offset;
       $out: append($out, $step-h $step-v $shadow-size $shadow-size $color, comma);
 
       $cell-counter: $cell-counter + 1;
-      
+
     }
-    
+
   }
-  
+
   @return $out;
-  
+
 }
 
 
@@ -69,7 +69,7 @@ $matrix-v: 20;
 }
 
 .demo--dancing-shadows__title {
-  
+
   position: absolute;
   top: 0;
   right: 0;
@@ -86,24 +86,24 @@ $matrix-v: 20;
     left: 0;
     margin: auto;
     padding: 5% 0;
-    // font-size: 20vh; 
+    // font-size: 20vh;
     line-height: 1.01;
     font-style: bold;
 
     background: $title-bg-color;
-    text-shadow: 
-      0 .1rem $title-bg-color,
-      0 .2rem $title-bg-color,
-      0 .3rem $title-bg-color,
-      0 .4rem $title-bg-color,
-      0 .6rem $title-bg-color,
-      0 .7rem $title-text-color,
-      0 .8rem $title-text-color;
+    text-shadow:
+      0 .1% $title-bg-color,
+      0 .2% $title-bg-color,
+      0 .3% $title-bg-color,
+      0 .4% $title-bg-color,
+      0 .6% $title-bg-color,
+      0 .7% $title-text-color,
+      0 .8% $title-text-color;
     color: $title-text-color;
     mix-blend-mode: darken;
     overflow: scroll;
     }
-  
+
   &:before {
     content: '';
     display: block;
@@ -118,7 +118,7 @@ $matrix-v: 20;
   display: block;
   position: absolute;
   top: 5%;
-  bottom: 15px;
+  bottom: 15vh;
   right: 5vw;
   left: 5vw;
   // width: 3.3em;
@@ -130,7 +130,7 @@ $matrix-v: 20;
 .text-item {
   display: block;
   position: relative;
-  
+
   // &--2 {
   //   margin-left: -.4em;
   //   }
